fix: fixed cropping of data labels

--- a/src/components/LineChart/LineChart.module.scss
+++ b/src/components/LineChart/LineChart.module.scss
@@ -10,3 +10,9 @@
         width: 60px;
     }
 }
+
+.line-chart {
+    svg[class='apexcharts-svg'] {
+        overflow: visible;
+    }
+}
